--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfolio</title>
 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"> 
@@ -22,18 +22,34 @@
             <div class="logo">
                 <a href="#"><span>M</span>enu</a>
             </div>
-            <div class="nav-toggler">
+             <div class="nav-toggler">
                 <span></span>
             </div>
             <ul class="nav">
                 <li><a href="#home" class="active"><i class="fa fa-home"></i>Home</a></li>
                 <li><a href="#about"><i class="fa fa-user"></i>About</a></li>
-                <!-- <li><a href="#"><i class="fa fa-list"></i>Services</a></li> -->
-                <li><a href="#portfolio"><i class="fa fa-briefcase"></i>Portfolio</a></li>
-                <li><a href="#contact"><i class="fa fa-comments"></i>Contact</a></li>
-            </ul>
+                <li><a href="#portfolio"><i class="fa fa-briefcase"></i>Portfolio</a></li> 
+                <li><a href="#contact"><i class="fa fa-comments"></i>Contact</a></li> 
+            </ul> 
+            
         </div>
         <!-- Aside ends -->
+        <!-- toggle menu begine -->
+    
+    <div class="toggle-menu">
+        <label for="toggle-btn">
+            <i class="fas fa-bars toggle-icon"></i>
+        </label>
+        <input id="toggle-btn" type="checkbox">
+        <ul class="toggle-items">
+            <li><a href="#home" class="active"><i class="fa fa-home"></i>Home</a></li>
+            <li><a href="#about"><i class="fa fa-user"></i>About</a></li>
+            <li><a href="#portfolio"><i class="fa fa-briefcase"></i>Portfolio</a></li> 
+            <li><a href="#contact"><i class="fa fa-comments"></i>Contact</a></li> 
+        </ul>
+    </div>    
+
+        <!-- toggle menu ends -->
         <!--Main Content begins-->
         <div class="main-content">
             <!--Home Section begins-->
@@ -47,7 +63,7 @@
                             <!-- <a href="#contact" class="btn hire-me">Hire Me</a> -->
                         </div>
                         <div class="home-img padd-15">
-                            <img src="images/k.jpeg" alt=""
+                            <img src="images/k.jpeg" alt="">
                         </div>
                     </div>
                 </div>
@@ -127,7 +143,10 @@
                                    </div>
                                </div>
                            </div>
+
+
                            <div class="row">
+
                                <div class="education padd-15">
                                    <h3 class="title">Education</h3>
                                    <div class="row">
@@ -235,7 +254,7 @@
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <a href="https://rkhushi.github.io/sortingAnimation.github.io/" target="_blank"><img src="images/portfolio/1.jpeg" height="200px" width="250px" alt=""></a>
+                                    <a href="https://rkhushi.github.io/sortingAnimation.github.io/" target="_blank"><img src="images/portfolio/1.jpeg"  alt=""></a>
                                 </div>
                             </div> 
                         </div>
@@ -244,7 +263,7 @@
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <a href="https://github.com/rkhushi/library_management_system" target="_blank"><img src="images/portfolio/2.jpeg" height="200px" width="250px" alt=""></a>
+                                    <a href="https://github.com/rkhushi/library_management_system" target="_blank"><img src="images/portfolio/2.jpeg" alt=""></a>
                                 </div>
                             </div> 
                         </div>
@@ -253,7 +272,7 @@
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <a href="https://github.com/rkhushi/number-mania" target="_blank"> <img src="images/portfolio/3.jpeg" height="200px" width="250px" alt=""></a>
+                                    <a href="https://github.com/rkhushi/number-mania" target="_blank"> <img src="images/portfolio/3.jpeg" alt=""></a>
                                 </div>
                             </div> 
                         </div>
@@ -262,7 +281,7 @@
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <a href="https://github.com/rkhushi/personal_assistant.git" target="_blank"><img src="images/portfolio/4.jpeg" height="200px" width="250px" alt=""></a>
+                                    <a href="https://github.com/rkhushi/personal_assistant.git" target="_blank"><img src="images/portfolio/4.jpeg" alt=""></a>
                                 </div>
                             </div> 
                         </div>
@@ -271,7 +290,7 @@
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <a href="https://rkhushi.github.io/huffman_visualizer.github.io/" target="_blank"><img src="images/portfolio/5.jpeg" height="200px" width="250px" alt=""></a>
+                                    <a href="https://rkhushi.github.io/huffman_visualizer.github.io/" target="_blank"><img src="images/portfolio/5.jpeg" alt=""></a>
                                 </div>
                             </div> 
                         </div>
@@ -295,7 +314,7 @@
                         <div class="contact-info-item padd-15">
                             <div class="icon"><i class="fa fa-phone"></i></div>
                             <h4>Call Me On</h4>
-                            <a href=”tel:+91-95925-33320″><p>+91 9592533320</p></a>
+                            <a href="tel:+91-95925-33320"><p>+91 9592533320</p></a>
                         </div>
                         <!--contact items ends-->
                         <!--contact items begins-->
@@ -346,6 +365,7 @@
         </div>
     </div>
     <!--Style Change end-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js" referrerpolicy="no-referrer"></script>
     <script src="js/script.js"></script>
     <script src="js/style-switcher.js"></script>
 </body>
