--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                                    </div>
                                    <div class="row">
                                         <div class="buttons padd-15">
-                                            <a href="https://drive.google.com/file/d/1VfuioP06Ahf4PTQ1IvhTGJuxWQdboQL_/view?usp=sharing" download target="_blank" class="btn">Download CV</a>
+                                            <a href="https://docs.google.com/document/d/1o8A2ribN9Jfhiqr6KYxVLIkDGN_Cgj1MBl6u8W5x58Q/edit?usp=sharing" download target="_blank" class="btn">Download CV</a>
                                             <a href="#contact" class="btn hire-me">Hire Me</a>
                                         </div>
                                     </div>
@@ -254,7 +254,7 @@
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <a href="https://rkhushi.github.io/sortingAnimation.github.io/" target="_blank"><img src="images/portfolio/1.jpeg"  alt=""></a>
+                                    <a href="https://github.com/rkhushi/sortingAnimation.github.io" target="_blank"><img src="images/portfolio/1.jpeg"  alt=""></a>
                                 </div>
                             </div> 
                         </div>
