--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                                    </div>
                                    <div class="row">
                                         <div class="buttons padd-15">
-                                            <a href="https://docs.google.com/document/d/1o8A2ribN9Jfhiqr6KYxVLIkDGN_Cgj1MBl6u8W5x58Q/edit?usp=sharing" download target="_blank" class="btn">Download CV</a>
+                                            <a href="https://drive.google.com/file/d/1NpRAotymAWdnpYPovi-M5NKmp7KunD6O/view?usp=share_link" download target="_blank" class="btn">Download CV</a>
                                             <a href="#contact" class="btn hire-me">Hire Me</a>
                                         </div>
                                     </div>
